feat: finish fixed nav

--- a/index.html
+++ b/index.html
@@ -4,9 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
 </head>
 <body>
-    
+    <!-- header -->
+    <header>
+        <!-- nav -->
+        <nav>
+            <div class="nav-left">
+                <div id="logo">
+                    <a href="#"><img src="img/logo-small.png" alt="logo dropbox"></a>
+                </div>
+                <ul>
+                    <a href="#"><li>Perché Dropbox</li></a>
+                    <a href="#"><li>Funzioni</li></a>
+                    <a href="#"><li>Piani e prezzi</li></a>
+                </ul>
+            </div>
+            <div class="nav-right">
+                <ul>
+                    <a href="#"><li>Supporto</li></a>
+                    <a href="#"><li>Contatta l'ufficio vendite</li></a>
+                    <a href="#"><li>Accedi</li></a>
+                </ul>
+                <button class="btn">Inizia</button>
+            </div>
+        </nav>
+        <!-- /nav -->
+    </header>
+    <!-- /header -->
 </body>
 </html>
