feat: add jumbo with image that overflow

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Dropbox</title>
 </head>
@@ -32,6 +33,32 @@
             </div>
         </nav>
         <!-- /nav -->
+        <div class="jumbo">
+            <div class="jumbo-container">
+                <div class="jumbo-header">
+                    <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+                </div>
+                <div class="jumbo-content">
+                    <div class="jumbo-left">
+                        <p>
+                            Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso posto.
+                            Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente
+                            e integrato per ottimizzare il flusso di lavoro esistente.
+                        </p>
+                        <div class="jumbo-button">
+                            <button class="btn">Inizia la tua prova gratuita</button>
+                        </div>
+                        <div class="jumbo-disclaimer">Annulla in qualsiasi momento</div>
+                        <div class="jumbo-sub-link">
+                            <i class="fa-solid fa-arrow-down"></i>
+                        </div>
+                    </div>
+                    <div class="jumbo-right">
+                        <img src="img/jumbo.png" alt="jumbo img">
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
     <!-- /header -->
 </body>
