feat: add subscription header

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="jumbo-disclaimer">Annulla in qualsiasi momento</div>
                         <div class="jumbo-sub-link">
-                            <i class="fa-solid fa-arrow-down"></i>
+                            <a href="#subscription"><i class="fa-solid fa-arrow-down"></i></a>
                         </div>
                     </div>
                     <div class="jumbo-right">
@@ -61,5 +61,29 @@
         </div>
     </header>
     <!-- /header -->
+
+    <!-- main -->
+    <main>
+        <div class="container-centered">
+            <!-- subscription -->
+            <div class="substription-header">
+                <h2>Trova il business che fa per te</h2>
+                <div class="fatture">
+                    <div class="fattura-mensile">
+                        <input type="radio" name="fattura" id="mensile">
+                        <label for="mensile">Fattura mensile</label>
+                    </div>
+                    <div class="fattura-annuale">
+                        <input type="radio" name="fattura" id="annuale">
+                        <label for="annuale">Fattura annuale</label>
+                    </div>
+                </div>
+            </div>
+            <!-- /subscription -->
+
+
+        </div>
+    </main>
+    <!-- /main -->
 </body>
 </html>
