feat: add subscription section

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <div class="jumbo-disclaimer">Annulla in qualsiasi momento</div>
                         <div class="jumbo-sub-link">
-                            <a href="#subscription"><i class="fa-solid fa-arrow-down"></i></a>
+                            <a href="#subscription-header"><i class="fa-solid fa-arrow-down"></i></a>
                         </div>
                     </div>
                     <div class="jumbo-right">
@@ -66,7 +66,7 @@
     <main>
         <div class="container-centered">
             <!-- subscription -->
-            <div class="substription-header">
+            <div id="substription-header">
                 <h2>Trova il business che fa per te</h2>
                 <div class="fatture">
                     <div class="fattura-mensile">
@@ -79,8 +79,203 @@
                     </div>
                 </div>
             </div>
-            <!-- /subscription -->
 
+            <div id="subscription-plans">
+                <div class="plan single">
+                    <div class="plan-header">
+                        <i class="fa-solid fa-user"></i>
+                        Singolo
+                    </div>
+                    <div class="plan-content">
+                        <div class="plan-info">
+                            <div class="plan-name">
+                                <h3>Professional</h3>
+                            </div>
+                            <div class="plan-price">
+                                <strong>€ 12.00</strong>
+                            </div>
+                            <div class="plan-period">
+                                <span class="light">/mese</span>
+                            </div>
+                        </div>
+                        <div class="plan-offer">
+                            <div class="plan-offer-users">
+                                <div class="plan-offer-users-icon">
+                                    <i class="fa-solid fa-user"></i>
+                                </div>
+                                <div class="plan-offer-users-content">
+                                    1 utente
+                                </div>
+                            </div>
+                            <div class="plan-offer-space">
+                                <div class="plan-offer-space-icon">
+                                    <i class="fa-solid fa-folder"></i>
+                                </div>
+                                <div class="plan-offer-space-content">
+                                    5 TB di spazio di archiviazione sicuro
+                                </div>
+                            </div>
+                            <div class="plan-offer-functions">
+                                <div class="plan-offer-functions-icon">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                </div>
+                                <div class="plan-offer-functions-content">
+                                    Funzioni di produttività premium e condivisione file semplice e sicura
+                                </div>
+                            </div>
+                        </div>
+                        <div class="plan-button">
+                            <button class="btn">Prova gratis per 30 giorni</button>
+                        </div>
+                        <div class="plan-buy">
+                            oppure <a href="#">acquista ora</a>
+                        </div>
+                        <div class="separator"></div>
+                        <div class="focal-points-header">
+                            <strong>Punti salienti del piano</strong>
+                        </div>
+                        <div class="plan-focal-points">
+                            <div class="focal-points-list">
+                                <ul class="fa-ul">
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="plan team">
+                    <div class="plan-header">
+                        <i class="fa-solid fa-users"></i>
+                        Team
+                    </div>
+                    <div class="plan-content">
+                        <div class="plan-info">
+                            <div class="plan-name">
+                                <h3>Advanced</h3>
+                            </div>
+                            <div class="plan-price">
+                                <strong>€ 18.00</strong>
+                            </div>
+                            <div class="plan-period">
+                                <span class="light">/mese/mese</span>
+                            </div>
+                        </div>
+                        <div class="plan-offer">
+                            <div class="plan-offer-users">
+                                <div class="plan-offer-users-icon">
+                                    <i class="fa-solid fa-user"></i>
+                                </div>
+                                <div class="plan-offer-users-content">
+                                    3 o più utenti
+                                </div>
+                            </div>
+                            <div class="plan-offer-space">
+                                <div class="plan-offer-space-icon">
+                                    <i class="fa-solid fa-folder"></i>
+                                </div>
+                                <div class="plan-offer-space-content">
+                                    Tutto lo spazio di cui ha bisogno il tuo team
+                                </div>
+                            </div>
+                            <div class="plan-offer-functions">
+                                <div class="plan-offer-functions-icon">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                </div>
+                                <div class="plan-offer-functions-content">
+                                    Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                </div>
+                            </div>
+                        </div>
+                        <div class="plan-button">
+                            <button class="btn">Prova gratis per 30 giorni</button>
+                        </div>
+                        <div class="plan-buy">
+                            oppure <a href="#">acquista ora</a>
+                        </div>
+                        <div class="separator"></div>
+                        <div class="focal-points-header">
+                            <strong>Punti salienti del piano</strong>
+                        </div>
+                        <div class="plan-focal-points">
+                            <div class="focal-points-list">
+                                <ul class="fa-ul">
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Nessun limite di spazio per i file</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Risparmio del 50% rispetto alle iscrizioni singole</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Possibilità di inserire nuovi membri del team</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Gestione dei permessi in base ai ruoli</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="plan company">
+                    <div class="plan-header">
+                        <i class="fa-solid fa-building"></i>
+                        Azienda
+                    </div>
+                    <div class="plan-content">
+                        <div class="plan-info">
+                            <div class="plan-name">
+                                <h3>Professional</h3>
+                            </div>
+                            <div class="plan-price">
+                                <strong>€ 12.00</strong>
+                            </div>
+                            <div class="plan-period">
+                                <span class="light">/mese</span>
+                            </div>
+                        </div>
+                        <div class="plan-offer">
+                            <div class="plan-offer-users">
+                                <div class="plan-offer-users-icon">
+                                    <i class="fa-solid fa-user"></i>
+                                </div>
+                                <div class="plan-offer-users-content">
+                                    1 utente
+                                </div>
+                            </div>
+                            <div class="plan-offer-space">
+                                <div class="plan-offer-space-icon">
+                                    <i class="fa-solid fa-folder"></i>
+                                </div>
+                                <div class="plan-offer-space-content">
+                                    5 TB di spazio di archiviazione sicuro
+                                </div>
+                            </div>
+                            <div class="plan-offer-functions">
+                                <div class="plan-offer-functions-icon">
+                                    <i class="fa-solid fa-share-nodes"></i>
+                                </div>
+                                <div class="plan-offer-functions-content">
+                                    Funzioni di produttività premium e condivisione file semplice e sicura
+                                </div>
+                            </div>
+                        </div>
+                        <div class="plan-button">
+                            <button class="btn">Prova gratis per 30 giorni</button>
+                        </div>
+                        <div class="plan-buy">
+                            oppure <a href="#">acquista ora</a>
+                        </div>
+                        <div class="separator"></div>
+                        <div class="focal-points-header">
+                            <strong>Punti salienti del piano</strong>
+                        </div>
+                        <div class="plan-focal-points">
+                            <div class="focal-points-list">
+                                <ul class="fa-ul">
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- /subscription -->
 
         </div>
     </main>
