fix: fixed content in subscription

--- a/index.html
+++ b/index.html
@@ -218,13 +218,13 @@
                     <div class="plan-content">
                         <div class="plan-info">
                             <div class="plan-name">
-                                <h3>Professional</h3>
+                                <h3>Enterprise</h3>
                             </div>
                             <div class="plan-price">
-                                <strong>€ 12.00</strong>
+                                <strong>Contattaci</strong>
                             </div>
                             <div class="plan-period">
-                                <span class="light">/mese</span>
+                                <span class="light">-</span>
                             </div>
                         </div>
                         <div class="plan-offer">
@@ -233,7 +233,7 @@
                                     <i class="fa-solid fa-user"></i>
                                 </div>
                                 <div class="plan-offer-users-content">
-                                    1 utente
+                                    10 o più utenti
                                 </div>
                             </div>
                             <div class="plan-offer-space">
@@ -241,7 +241,7 @@
                                     <i class="fa-solid fa-folder"></i>
                                 </div>
                                 <div class="plan-offer-space-content">
-                                    5 TB di spazio di archiviazione sicuro
+                                    Soluzioni personalizzabili per la tua azienda
                                 </div>
                             </div>
                             <div class="plan-offer-functions">
@@ -249,12 +249,12 @@
                                     <i class="fa-solid fa-share-nodes"></i>
                                 </div>
                                 <div class="plan-offer-functions-content">
-                                    Funzioni di produttività premium e condivisione file semplice e sicura
+                                    Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
                                 </div>
                             </div>
                         </div>
                         <div class="plan-button">
-                            <button class="btn">Prova gratis per 30 giorni</button>
+                            <button class="btn">Contattaci</button>
                         </div>
                         <div class="plan-buy">
                             oppure <a href="#">acquista ora</a>
@@ -266,16 +266,20 @@
                         <div class="plan-focal-points">
                             <div class="focal-points-list">
                                 <ul class="fa-ul">
-                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Invia file fino a 100 GB con Dropbox Transfert</li>
                                     <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Cartelle offline su dispositivi mobili</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Servizio assistenza 24/h</li>
+                                    <li><span style="color: blue;" class="fa-li"><i class="fa-solid fa-check"></i></span>Possibilità di personalizzazione totale</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
             <!-- /subscription -->
+
+            <!-- team -->
+            <div class="team-section"></div>
+            <!-- /team -->
 
         </div>
     </main>
