feat: add team section

--- a/index.html
+++ b/index.html
@@ -278,7 +278,28 @@
             <!-- /subscription -->
 
             <!-- team -->
-            <div class="team-section"></div>
+            <div class="team-section">
+                <div class="team-header">
+                    <i class="fa-solid fa-building"></i>
+                    Team
+                </div>
+                <div class="team-container">
+                    <div class="team-left">
+                        <div class="team-title">
+                            <h3>Enterprise</h3>
+                            <p><strong>Contatta l'ufficio vendite per i prezzi</strong></p>
+                        </div>
+                        <div class="team-content">
+                            <p>
+                                Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT nella gestione su qualsiasi scala.
+                            </p>
+                        </div>
+                    </div>
+                    <div class="team-right">
+                        <button class="btn">Contatta l'ufficio vendite</button>
+                    </div>
+                </div>
+            </div>
             <!-- /team -->
 
         </div>
