feat: add partner section

--- a/index.html
+++ b/index.html
@@ -302,6 +302,20 @@
             </div>
             <!-- /team -->
 
+            <!-- Partner -->
+            <div class="partner-section">
+                <div class="partner-img">
+                    <img src="img/partner.png" alt="partner">
+                </div>
+                <div class="partner-content">
+                    <h3>Titolo</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam magni quidem accusamus repellendus distinctio incidunt unde quas earum, quasi sint accusantium suscipit qui repudiandae dolores? Incidunt ut architecto repudiandae animi?</p>
+                    <button class="btn2">Bottone</button>
+                </div>
+            </div>
+            <!-- /Partner -->
+
+            
         </div>
     </main>
     <!-- /main -->
