--- a/index.html
+++ b/index.html
@@ -315,7 +315,41 @@
             </div>
             <!-- /Partner -->
 
-            
+            <div class="dropbox-business">
+                <h2>Esegui più operazioni con Dropbox Business</h2>
+                <div class="business-grid">
+                    <div class="item">
+                        <img src="img/business-feature-switching-tools.png" alt="img1">
+                        <h2>Titolo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                    </div>
+                    <div class="item">
+                        <img src="img/business-feature-switching-tools.png" alt="img1">
+                        <h2>Titolo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                    </div>
+                    <div class="item">
+                        <img src="img/business-feature-switching-tools.png" alt="img1">
+                        <h2>Titolo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                    </div>
+                    <div class="item">
+                        <img src="img/business-feature-switching-tools.png" alt="img1">
+                        <h2>Titolo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                    </div>
+                    <div class="item">
+                        <img src="img/business-feature-switching-tools.png" alt="img1">
+                        <h2>Titolo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                    </div>
+                    <div class="item">
+                        <img src="img/business-feature-switching-tools.png" alt="img1">
+                        <h2>Titolo</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- /main -->
