feat: added cta section

--- a/index.html
+++ b/index.html
@@ -390,6 +390,20 @@
         </div>
         <!-- /companies -->
 
+        <!-- call-to-action section -->
+        <div class="cta-section">
+            <div class="cta container-centered">
+                <div class="cta-left">
+                    <h2>Porta Dropbox Business nella tua azienda</h2>
+                </div>
+                <div class="cta-right">
+                    <button class="btn3">Inizia la tua prova gratuita</button>
+                </div>
+            </div>
+        </div>
+        <!-- /call-to-action section -->
+
+
     </main>
     <!-- /main -->
 </body>
