feat: added faq section layout

--- a/index.html
+++ b/index.html
@@ -403,6 +403,15 @@
         </div>
         <!-- /call-to-action section -->
 
+        <!-- faq -->
+        <!-- Per bonus andrò a stilizzare meglio e ad aggiungere la funzionalità hover -->
+        <div class="faq-section container-centered">
+            <h2>Domande Frequenti</h2>
+            <div class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eos perferendis magnam aperiam?</div>
+            <div class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eos perferendis magnam aperiam?</div>
+            <div class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eos perferendis magnam aperiam?</div>
+        </div>
+        <!-- /faq -->
 
     </main>
     <!-- /main -->
