feat: add footer layout

--- a/index.html
+++ b/index.html
@@ -415,5 +415,63 @@
 
     </main>
     <!-- /main -->
+
+    <!-- footer -->
+    <footer>
+        <div class="footer-container">
+            <div class="footer-item">
+                <h4>Titolo</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h4>Titolo</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h4>Titolo</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h4>Titolo</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+            <div class="footer-item">
+                <h4>Titolo</h4>
+                <ul>
+                    <li>Applicazione Desktop</li>
+                    <li>Perché Dropbox</li>
+                    <li>Piani</li>
+                    <li>Sicurezza</li>
+                    <li>Funzioni</li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <!-- /footer -->
+
 </body>
 </html>
