fix: fixed link to subscription plans section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             </div>
         </nav>
         <!-- /nav -->
+
         <div class="jumbo">
             <div class="jumbo-container">
                 <div class="jumbo-header">
@@ -50,7 +51,7 @@
                         </div>
                         <div class="jumbo-disclaimer">Annulla in qualsiasi momento</div>
                         <div class="jumbo-sub-link">
-                            <a href="#subscription-header"><i class="fa-solid fa-arrow-down"></i></a>
+                            <a href="#subscription-plans"><i class="fa-solid fa-arrow-down"></i></a>
                         </div>
                     </div>
                     <div class="jumbo-right">
