fix: add html comment + finish layout

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </nav>
         <!-- /nav -->
 
+        <!-- jumbo -->
         <div class="jumbo">
             <div class="jumbo-container">
                 <div class="jumbo-header">
@@ -60,6 +61,8 @@
                 </div>
             </div>
         </div>
+        <!-- /jumbo -->
+        
     </header>
     <!-- /header -->
 
