style: add style to partner section

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
         </div>
         <!-- /jumbo -->
-        
+
     </header>
     <!-- /header -->
 
@@ -312,9 +312,13 @@
                     <img src="img/partner.png" alt="partner">
                 </div>
                 <div class="partner-content">
-                    <h3>Titolo</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam magni quidem accusamus repellendus distinctio incidunt unde quas earum, quasi sint accusantium suscipit qui repudiandae dolores? Incidunt ut architecto repudiandae animi?</p>
-                    <button class="btn2">Bottone</button>
+                    <h3>Entra in contatto con un partner Dropbox</h3>
+                    <p>
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari
+                        per raggiungere i tuoi obbiettivi aziendali, tra cui implementazione, integrazione, gestione 
+                        e supporto continui.
+                    </p>
+                    <button class="btn2">Trova un partner</button>
                 </div>
             </div>
             <!-- /Partner -->
