style: finish style to dropbox-business section

--- a/index.html
+++ b/index.html
@@ -324,43 +324,70 @@
             </div>
             <!-- /Partner -->
 
+
+            <!-- dropbox-business -->
             <div class="dropbox-business">
                 <h2>Esegui più operazioni con Dropbox Business</h2>
                 <div class="business-grid">
                     <div class="item">
                         <img src="img/business-feature-switching-tools.png" alt="img1">
-                        <h3>Titolo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>
+                            Porta al termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, 
+                            file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
                     </div>
                     <div class="item">
-                        <img src="img/business-feature-switching-tools.png" alt="img1">
-                        <h3>Titolo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                        <img src="img/business-feature-send-files-it.png" alt="img2">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>
+                            Porta al termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, 
+                            file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
                     </div>
                     <div class="item">
-                        <img src="img/business-feature-switching-tools.png" alt="img1">
-                        <h3>Titolo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                        <img src="img/business-feature-coordinate-it.png" alt="img3">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>
+                            Porta al termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, 
+                            file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
                     </div>
                     <div class="item">
-                        <img src="img/business-feature-switching-tools.png" alt="img1">
-                        <h3>Titolo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                        <img src="img/business-feature-integrations-it.png" alt="img4">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>
+                            Porta al termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, 
+                            file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
                     </div>
                     <div class="item">
-                        <img src="img/business-feature-switching-tools.png" alt="img1">
-                        <h3>Titolo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                        <img src="img/business-feature-multi-device.png" alt="img5">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>
+                            Porta al termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, 
+                            file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
                     </div>
                     <div class="item">
-                        <img src="img/business-feature-switching-tools.png" alt="img1">
-                        <h3>Titolo</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi libero, provident fuga alias repellendus nostrum facilis. A fugit ipsam perspiciatis quibusdam. Dolores fuga tempora recusandae suscipit est, eum possimus! Voluptates.</p>
+                        <img src="img/business-feature-security.png" alt="img6">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>
+                            Porta al termine le attività quotidiane con un solo strumento.
+                            Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, 
+                            file Microsoft Office e Dropbox Paper direttamente da Dropbox.
+                        </p>
                     </div>
                 </div>
                 <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
                 <a href="#">Scopri di più sui nostri clienti</a>
             </div>
+            <!-- /ropbox-business -->
         </div>
 
         <!-- companies -->
