--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 <h2>Più di 500.000 team utilizzano Dropbox Business</h2>
                 <a href="#">Scopri di più sui nostri clienti</a>
             </div>
-            <!-- /ropbox-business -->
+            <!-- /dropbox-business -->
         </div>
 
         <!-- companies -->
