--- a/index.html
+++ b/index.html
@@ -452,9 +452,42 @@
         <!-- Per bonus andrò a stilizzare meglio e ad aggiungere la funzionalità hover -->
         <div class="faq-section container-centered">
             <h2>Domande Frequenti</h2>
-            <div class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eos perferendis magnam aperiam?</div>
-            <div class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eos perferendis magnam aperiam?</div>
-            <div class="faq">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore incidunt eos perferendis magnam aperiam?</div>
+            <div class="faq">
+                <div class="faq-left">
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <p>
+                        Non lo so :-)
+                    </p>
+                </div>
+                <div class="faq-right">
+                    <i class="fa-solid fa-angle-down"></i>
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faq-left">
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <p>
+                        Non lo so :-)
+                    </p>
+                </div>
+                <div class="faq-right">
+                    <i class="fa-solid fa-angle-down"></i>
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+            </div>
+            <div class="faq">
+                <div class="faq-left">
+                    <strong>Qual è la differenza tra Dropbox Business Standard e Dropbox Business Advanced?</strong>
+                    <p>
+                        Non lo so :-)
+                    </p>
+                </div>
+                <div class="faq-right">
+                    <i class="fa-solid fa-angle-down"></i>
+                    <i class="fa-solid fa-angle-up"></i>
+                </div>
+            </div>
         </div>
         <!-- /faq -->
 
