--- a/index.html
+++ b/index.html
@@ -497,53 +497,59 @@
     <footer>
         <div class="footer-container">
             <div class="footer-item">
-                <h4>Titolo</h4>
+                    <h4>Dropbox</h4>
+                    <ul>
+                        <li><a href="#">Applicazione Desktop</a></li>
+                        <li><a href="#">Perché Dropbox</a></li>
+                        <li><a href="#">Piani</a></li>
+                        <li><a href="#">Sicurezza</a></li>
+                        <li><a href="#">Funzioni</a></li>
+                    </ul>            
+                <div class="lang">
+                    <hr>
+                    <i class="fa-solid fa-earth-americas"></i>
+                    Italiano
+                    <i class="fa-solid fa-caret-up"></i>
+                </div>
+            </div>
+            <div class="footer-item">
+                <h4>Prodotti</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perché Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <li><a href="#">Applicazione Desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
                 </ul>
             </div>
             <div class="footer-item">
-                <h4>Titolo</h4>
+                <h4>Azienda</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perché Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <li><a href="#">Applicazione Desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
                 </ul>
             </div>
             <div class="footer-item">
-                <h4>Titolo</h4>
+                <h4>Supporto</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perché Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <li><a href="#">Applicazione Desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
                 </ul>
             </div>
             <div class="footer-item">
-                <h4>Titolo</h4>
+                <h4>Community</h4>
                 <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perché Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
-                </ul>
-            </div>
-            <div class="footer-item">
-                <h4>Titolo</h4>
-                <ul>
-                    <li>Applicazione Desktop</li>
-                    <li>Perché Dropbox</li>
-                    <li>Piani</li>
-                    <li>Sicurezza</li>
-                    <li>Funzioni</li>
+                    <li><a href="#">Applicazione Desktop</a></li>
+                    <li><a href="#">Perché Dropbox</a></li>
+                    <li><a href="#">Piani</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Funzioni</a></li>
                 </ul>
             </div>
         </div>
