fix: fixed color arrow + title subscription

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <div class="container-centered">
             <!-- subscription -->
             <div id="substription-header">
-                <h2>Trova il business che fa per te</h2>
+                <h2>Trova il piano business che fa per te</h2>
                 <div class="fatture">
                     <div class="fattura-mensile">
                         <input type="radio" name="fattura" id="mensile">
